--- a/3rd-lib/sqlite3/CMakeLists.txt
+++ b/3rd-lib/sqlite3/CMakeLists.txt
@@ -3,3 +3,4 @@ project(sqlite3 C)
 set(SRC sqlite3.c)
 add_library(${PROJECT_NAME} SHARED ${SRC})
 target_include_directories(${PROJECT_NAME} PUBLIC .)
+target_link_libraries(${PROJECT_NAME} dl)
