--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,11 @@ if(NOT DEFINED BUILD_TYPE)
   set(BUILD_TYPE "Release")
 endif()
 
+add_compile_options(-Wall -fPIC)
 if("${BUILD_TYPE}" STREQUAL "Release")
-	add_compile_options(-Wall -s -O3)
+	add_compile_options(-s -O3)
 elseif("${BUILD_TYPE}" STREQUAL "Debug")
-	add_compile_options(-Wall -g -O0)
+	add_compile_options(-g -O0)
 else()
 	message(FATAL_ERROR "Unknown build type")
 endif()
